@@ -3,6 +3,8 @@
 
 Version 9.0.0
 
+  - Fix for Bug#108830 (Bug#34721173), LIMIT clause, setMaxRows and cursor combined returns wrong number or rows.
+
 Version 8.4.0
 
   - WL#15706, Add OpenTelemetry tracing.
